fixed bot connecting with non play commands