@@ -1,20 +1,12 @@
-import net.dv8tion.jda.api.entities.Invite;
 import net.dv8tion.jda.api.entities.Message;
-import net.dv8tion.jda.api.entities.Widget;
-import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
-import net.dv8tion.jda.api.managers.AudioManager;
-
-import java.util.LinkedList;
 import java.util.List;
-import java.util.Locale;
-import java.util.Map;
 
 public class Listener extends ListenerAdapter {
-    private char prefix;
+    private final char PREFIX;
     public Listener(char prefix) {
-        this.prefix = prefix;
+        this.PREFIX = prefix;
     }
     @Override
     public void onMessageReceived(MessageReceivedEvent event) {
@@ -27,7 +19,7 @@ public class Listener extends ListenerAdapter {
             message = message.substring(1);
             String[] divided = message.split(" ");
 
-            if(messagePrefix == prefix) {
+            if(messagePrefix == PREFIX) {
                 switch(divided[0].toLowerCase()){
                     case("ping") :
                         CommandHandler.handleResponse(event,null,"PONG!");
@@ -41,11 +33,11 @@ public class Listener extends ListenerAdapter {
                         break;
                     case("file") :
                         List<Message.Attachment> attachments = event.getMessage().getAttachments();
-                        if(attachments.size() > 0) {
-                            String fileExtension = attachments.get(0).getFileExtension();
+                        if(!attachments.isEmpty()) {
+                            String fileExtension = attachments.getFirst().getFileExtension();
                             assert fileExtension != null;
                             if(fileExtension.equals("mp3") || fileExtension.equals("wav") || fileExtension.equals("ogg")) {
-                                CommandHandler.handleFile(event, null, attachments.get(0));
+                                CommandHandler.handleFile(event, null, attachments.getFirst());
                             } else {
                                 CommandHandler.handleResponse(event, null,"Girl, I can't read that!");
                             }
@@ -77,7 +69,7 @@ public class Listener extends ListenerAdapter {
                         break;
                     case("remove") :
                         if(divided.length >= 2) {
-                            CommandHandler.handleRemove(event, null, message.substring(7));
+                            CommandHandler.handleRemove(event, null, divided[1]);
                         } else {
                             CommandHandler.handleResponse(event, null,
                                     "Which number am I supposed to remove???? Your mom????");
@@ -91,7 +83,7 @@ public class Listener extends ListenerAdapter {
                         break;
                     case("first") :
                         if(divided.length >= 2) {
-                            CommandHandler.handleFirst(event, null, message.substring(5));
+                            CommandHandler.handleFirst(event, null, divided[1]);
                         } else {
                             CommandHandler.handleResponse(event, null,"Give song RIGHT NOW or I'm die.");
                         }
